--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "35995fd6",
+   "id": "8fca7688",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "3487c39b",
+   "id": "b2920162",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "e87770a9",
+   "id": "734ed32c",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "afa550ed",
+   "id": "854aa550",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e011ef39",
+   "id": "68165088",
    "metadata": {},
    "source": [
     "## Array Slicing"
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "29c0cedd",
+   "id": "8a28b4d1",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "17366505",
+   "id": "b7f93b79",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "58cf7b19",
+   "id": "098a0bfb",
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "92c3fef2",
+   "id": "d76d2d05",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bc06eb8",
+   "id": "6d678d22",
    "metadata": {},
    "source": [
     "## Negative indices"
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4e2934c",
+   "id": "90cc0067",
    "metadata": {},
    "source": [
     "####  Negative indices always start from last element of n-d \n",
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "852513fb",
+   "id": "2aad1009",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "19cabef8",
+   "id": "8c99f586",
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "5afc7a29",
+   "id": "0276a531",
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "e7f779d4",
+   "id": "2745594a",
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b569f308",
+   "id": "e423559e",
    "metadata": {},
    "source": [
     "### Slincing of 2D Array"
@@ -925,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "3b86a19f",
+   "id": "87d33f7b",
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "82d0d6a0",
+   "id": "0c675235",
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "a6497da3",
+   "id": "2470f68c",
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "00698deb",
+   "id": "791d5cf6",
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "1007dc69",
+   "id": "5fbb744a",
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "5f74b5a7",
+   "id": "57766aeb",
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "698a376a",
+   "id": "5a568daf",
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "5d876d6a",
+   "id": "fdac5fcb",
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "09ee20e3",
+   "id": "880527c2",
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcc50db4",
+   "id": "44c37815",
    "metadata": {},
    "source": [
     "## Slicing of 3D array"
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "9fc7769a",
+   "id": "e35357dc",
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "254a3ba7",
+   "id": "decd18dd",
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "874ebcce",
+   "id": "56296668",
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "f7cba251",
+   "id": "7d9034df",
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ce4b908",
+   "id": "08f415b4",
    "metadata": {},
    "source": [
     "# Data types in Numpy"
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "691b4dfd",
+   "id": "3ab6f378",
    "metadata": {},
    "source": [
     "# list of all data types in numpy"
@@ -1242,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "ff8cb275",
+   "id": "fc82f89c",
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "6ba90fd0",
+   "id": "be323e23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "2e73a239",
+   "id": "b7812794",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "a806befb",
+   "id": "505604bc",
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "343de1c7",
+   "id": "5bb342fc",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "3ddc37a6",
+   "id": "5d8da1bf",
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "90050c09",
+   "id": "18034a7f",
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "ca0a8b92",
+   "id": "67d1af80",
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "25b0d0cb",
+   "id": "5d641dc5",
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "c044736c",
+   "id": "bdac9a97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,14 +1446,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "993f909c",
+   "id": "b9980e65",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "d9aa0faa",
+   "id": "394ba37d",
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af2319e1",
+   "id": "d9d6021c",
    "metadata": {},
    "source": [
     "## Data Type Conversion"
@@ -1480,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "567c6293",
+   "id": "fa3e0ea4",
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1510,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "7a4b43ed",
+   "id": "66b16902",
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e3864bd",
+   "id": "4d7bd357",
    "metadata": {},
    "source": [
     "## Differance between copy and view"
@@ -1546,7 +1546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5aeec22",
+   "id": "e9615ed6",
    "metadata": {},
    "source": [
     "## Copy :\n",
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "f1bfb4cd",
+   "id": "1933dfc6",
    "metadata": {},
    "outputs": [
     {
@@ -1589,7 +1589,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "7ad725c8",
+   "id": "d29bd363",
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1619,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "fb4bf4cf",
+   "id": "75c0e25e",
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1645,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "00cc606f",
+   "id": "ab3a4687",
    "metadata": {},
    "outputs": [
     {
@@ -1672,7 +1672,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "1fa363d9",
+   "id": "1fb698ec",
    "metadata": {},
    "outputs": [
     {
@@ -1699,7 +1699,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "77a2c247",
+   "id": "a70990e5",
    "metadata": {},
    "outputs": [
     {
@@ -1723,7 +1723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30bd28ee",
+   "id": "d8601685",
    "metadata": {},
    "source": [
     "### Base concept : how to identify copy or  view"
@@ -1731,7 +1731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7286bfd",
+   "id": "a69ba152",
    "metadata": {},
    "source": [
     "#### That will possible  by using \"base\" fuction\n",
@@ -1741,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "5214e0e4",
+   "id": "4c3481c2",
    "metadata": {},
    "outputs": [
     {
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd053b30",
+   "id": "88a240be",
    "metadata": {},
    "source": [
     "## Numpy Array Reshaping "
@@ -1774,7 +1774,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "942f5763",
+   "id": "f4d7d4de",
    "metadata": {},
    "outputs": [
     {
@@ -1814,7 +1814,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "12f739e2",
+   "id": "51661ab8",
    "metadata": {},
    "outputs": [
     {
@@ -1832,7 +1832,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "3766106e",
+   "id": "7740705e",
    "metadata": {},
    "outputs": [
     {
@@ -1867,7 +1867,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "f42adb86",
+   "id": "a3e3b0f2",
    "metadata": {},
    "outputs": [
     {
@@ -1891,7 +1891,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "59ad9de2",
+   "id": "f0f5bf5d",
    "metadata": {},
    "outputs": [
     {
@@ -1921,7 +1921,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "7b49d19f",
+   "id": "e352e30f",
    "metadata": {},
    "outputs": [
     {
@@ -1949,21 +1949,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e34513a5",
+   "execution_count": 130,
+   "id": "d0a99c94",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11 44 77 88 99 55]\n",
+      "1\n",
+      "****************************************************************************************************\n",
+      "[[11 44]\n",
+      " [77 88]\n",
+      " [99 55]]\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([11,44,77,88,99,55])\n",
     "newarr = arr.reshape(3,2)\n",
     "print(arr)\n",
-    "print(arr.ndim)"
+    "print(arr.ndim)\n",
+    "print('*'*100)\n",
+    "print(newarr)\n",
+    "print(newarr.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "f9fd102c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 11  44  77  88  99  55]]\n",
+      "\n",
+      " [[111 441 717 188 919 515]]]\n",
+      "3\n",
+      "****************************************************************************************************\n",
+      "[ 11  44  77  88  99  55 111 441 717 188 919 515]\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cvert 3D array into 1D array\n",
+    "arr = np.array([[[11,44,77,88,99,55]],[[111,441,717,188,919,515]]])\n",
+    "newarr = arr.reshape(12,)\n",
+    "print(arr)\n",
+    "print(arr.ndim)\n",
+    "print('*'*100)\n",
+    "print(newarr)\n",
+    "print(newarr.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "889ecbc1",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 11  44  77  88  99  55 111 441 717 188 919 515]\n",
+      "1\n",
+      "****************************************************************************************************\n",
+      "[[[ 11  44  77  88]\n",
+      "  [ 99  55 111 441]\n",
+      "  [717 188 919 515]]]\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([11,44,77,88,99,55,111,441,717,188,919,515])\n",
+    "newarr = arr.reshape(1,3,4)\n",
+    "print(arr)\n",
+    "print(arr.ndim)\n",
+    "print('*'*100)\n",
+    "print(newarr)\n",
+    "print(newarr.ndim)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d47fc15",
+   "id": "ee361460",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert 4D array into 1D array \n",
+    "arr = np.array ([[[[11,44,77,88,99,55]]]])\n",
+    "newarr = arr.reshape(6,)\n",
+    "print(arr)\n",
+    "print(arr.ndim)\n",
+    "print('*'*100)\n",
+    "print(newarr)\n",
+    "print(newarr.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d8d6e17",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1971,7 +2068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ede48f92",
+   "id": "f4a817ab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1979,31 +2076,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acab5b5a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c982a99",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "053dbfaf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22753124",
+   "id": "e25a079f",
    "metadata": {},
    "outputs": [],
    "source": []
