--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8fca7688",
+   "id": "28604dfd",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "b2920162",
+   "id": "af918ce2",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "734ed32c",
+   "id": "ecd982d5",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "854aa550",
+   "id": "1df5ee32",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68165088",
+   "id": "d321d14c",
    "metadata": {},
    "source": [
     "## Array Slicing"
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "8a28b4d1",
+   "id": "348e8d60",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "b7f93b79",
+   "id": "55aec0ed",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "098a0bfb",
+   "id": "e6513708",
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "d76d2d05",
+   "id": "92db1714",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d678d22",
+   "id": "25c69368",
    "metadata": {},
    "source": [
     "## Negative indices"
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90cc0067",
+   "id": "430c223a",
    "metadata": {},
    "source": [
     "####  Negative indices always start from last element of n-d \n",
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "2aad1009",
+   "id": "6e8805fc",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "8c99f586",
+   "id": "432a35f7",
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "0276a531",
+   "id": "659c4bf7",
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "2745594a",
+   "id": "15b2a48e",
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e423559e",
+   "id": "2d4a717d",
    "metadata": {},
    "source": [
     "### Slincing of 2D Array"
@@ -925,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "87d33f7b",
+   "id": "3164f297",
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "0c675235",
+   "id": "f50553d1",
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "2470f68c",
+   "id": "edc273c7",
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "791d5cf6",
+   "id": "4e23a399",
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "5fbb744a",
+   "id": "136bc9c8",
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "57766aeb",
+   "id": "9510e7f8",
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "5a568daf",
+   "id": "f0dbb181",
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "fdac5fcb",
+   "id": "f66ca599",
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "880527c2",
+   "id": "36c4b24b",
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44c37815",
+   "id": "d27f0d57",
    "metadata": {},
    "source": [
     "## Slicing of 3D array"
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "e35357dc",
+   "id": "3d92da26",
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "decd18dd",
+   "id": "af406f5d",
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "56296668",
+   "id": "af6647f3",
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "7d9034df",
+   "id": "e58af1f8",
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08f415b4",
+   "id": "82201965",
    "metadata": {},
    "source": [
     "# Data types in Numpy"
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ab6f378",
+   "id": "e3a96f5a",
    "metadata": {},
    "source": [
     "# list of all data types in numpy"
@@ -1242,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "fc82f89c",
+   "id": "72444517",
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "be323e23",
+   "id": "30448cb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "b7812794",
+   "id": "dfcd0c73",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "505604bc",
+   "id": "26382e21",
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "5bb342fc",
+   "id": "19d05281",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "5d8da1bf",
+   "id": "5fa06d29",
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "18034a7f",
+   "id": "f24b37c3",
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "67d1af80",
+   "id": "400bfbf1",
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "5d641dc5",
+   "id": "01d4c219",
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "bdac9a97",
+   "id": "df64f816",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,14 +1446,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9980e65",
+   "id": "3f23ef50",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "394ba37d",
+   "id": "87370531",
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9d6021c",
+   "id": "0ecbd64e",
    "metadata": {},
    "source": [
     "## Data Type Conversion"
@@ -1480,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "fa3e0ea4",
+   "id": "6dbef024",
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1510,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "66b16902",
+   "id": "b1a82d75",
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d7bd357",
+   "id": "41f3bc60",
    "metadata": {},
    "source": [
     "## Differance between copy and view"
@@ -1546,7 +1546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9615ed6",
+   "id": "69d46f68",
    "metadata": {},
    "source": [
     "## Copy :\n",
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "1933dfc6",
+   "id": "25c5ae0d",
    "metadata": {},
    "outputs": [
     {
@@ -1589,7 +1589,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "d29bd363",
+   "id": "ab9fefb7",
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1619,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "75c0e25e",
+   "id": "d9d7400e",
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1645,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "ab3a4687",
+   "id": "a98bc8dd",
    "metadata": {},
    "outputs": [
     {
@@ -1672,7 +1672,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "1fb698ec",
+   "id": "6ef951a5",
    "metadata": {},
    "outputs": [
     {
@@ -1699,7 +1699,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "a70990e5",
+   "id": "632914df",
    "metadata": {},
    "outputs": [
     {
@@ -1723,7 +1723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8601685",
+   "id": "44995317",
    "metadata": {},
    "source": [
     "### Base concept : how to identify copy or  view"
@@ -1731,7 +1731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a69ba152",
+   "id": "6733fa18",
    "metadata": {},
    "source": [
     "#### That will possible  by using \"base\" fuction\n",
@@ -1741,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "4c3481c2",
+   "id": "a81b2ce5",
    "metadata": {},
    "outputs": [
     {
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88a240be",
+   "id": "7518b790",
    "metadata": {},
    "source": [
     "## Numpy Array Reshaping "
@@ -1774,7 +1774,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "f4d7d4de",
+   "id": "ed4ad8a9",
    "metadata": {},
    "outputs": [
     {
@@ -1814,7 +1814,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "51661ab8",
+   "id": "efc75ce1",
    "metadata": {},
    "outputs": [
     {
@@ -1832,7 +1832,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "7740705e",
+   "id": "578a9f88",
    "metadata": {},
    "outputs": [
     {
@@ -1867,7 +1867,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "a3e3b0f2",
+   "id": "3b35df36",
    "metadata": {},
    "outputs": [
     {
@@ -1891,7 +1891,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "f0f5bf5d",
+   "id": "42723fe9",
    "metadata": {},
    "outputs": [
     {
@@ -1921,7 +1921,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "e352e30f",
+   "id": "868a1243",
    "metadata": {},
    "outputs": [
     {
@@ -1950,7 +1950,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "d0a99c94",
+   "id": "730860f0",
    "metadata": {},
    "outputs": [
     {
@@ -1980,7 +1980,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "f9fd102c",
+   "id": "059e681c",
    "metadata": {},
    "outputs": [
     {
@@ -2011,7 +2011,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "889ecbc1",
+   "id": "e407b27f",
    "metadata": {
     "scrolled": true
    },
@@ -2042,10 +2042,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ee361460",
+   "execution_count": 2,
+   "id": "d14055cc",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import numpy as np\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "46bf335e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[11 44 77 88 99 55]]]]\n",
+      "4\n",
+      "****************************************************************************************************\n",
+      "[11 44 77 88 99 55]\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# convert 4D array into 1D array \n",
     "arr = np.array ([[[[11,44,77,88,99,55]]]])\n",
@@ -2054,13 +2076,59 @@
     "print(arr.ndim)\n",
     "print('*'*100)\n",
     "print(newarr)\n",
-    "print(newarr.)"
+    "print(newarr.ndim)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "73798437",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11 44 77 88 99 55]\n",
+      "1\n",
+      "****************************************************************************************************\n",
+      "[[11 44]\n",
+      " [77 88]\n",
+      " [99 55]]\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([11,44,77,88,99,55])\n",
+    "newarr = arr.reshape((3,2))\n",
+    "print(arr)\n",
+    "print(arr.ndim)\n",
+    "print('*'*100)\n",
+    "print(newarr)\n",
+    "print(newarr.ndim)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34e89bd6",
+   "metadata": {},
+   "source": [
+    "## Numpy Array Reshape Flatten Unknown Dimention"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d291efd",
+   "metadata": {},
+   "source": [
+    "#### if user dont know any one dimention out 3 dimention then numpy can obtain it for user have mention the _1 for thaat dim"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d8d6e17",
+   "id": "8e03b286",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2068,7 +2136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4a817ab",
+   "id": "2d355a19",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2076,7 +2144,167 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e25a079f",
+   "id": "87a7f9ba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5b15a8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c347239",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d09ed03a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2166e50a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "574be14b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b75233ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2753a3b0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "729e53d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2589a9e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d3cebaa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "648213db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67d377ba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1a9603e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c054df56",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae534524",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "857326ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b304d97",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "053b8047",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6da341d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78ea30fa",
    "metadata": {},
    "outputs": [],
    "source": []
