--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -2212,7 +2212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 76,
    "id": "44462ba1",
    "metadata": {},
    "outputs": [
@@ -2237,7 +2237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 77,
    "id": "a2fe51f7",
    "metadata": {},
    "outputs": [
@@ -2266,7 +2266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 78,
    "id": "3064738d",
    "metadata": {},
    "outputs": [
@@ -2322,7 +2322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 79,
    "id": "c3d8d47c",
    "metadata": {},
    "outputs": [
@@ -2353,7 +2353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 80,
    "id": "c555bbb6",
    "metadata": {},
    "outputs": [
@@ -2361,7 +2361,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<numpy.nditer object at 0x0000022DA520F230>\n",
+      "<numpy.nditer object at 0x00000203DDAA9B10>\n",
       "1\n",
       "2\n",
       "3\n",
@@ -2382,27 +2382,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 96,
-   "id": "2eb55cec",
+   "cell_type": "raw",
+   "id": "23c83cb8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "int to float 1.0\n",
-      "int to float 2.0\n",
-      "int to float 3.0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "b'1'\n",
-      "b'2'\n",
-      "b'3'\n"
-     ]
-    }
-   ],
    "source": [
     "# Casting array eleemt from one type other data type \n",
     "\n",
@@ -2419,7 +2401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 83,
    "id": "7bab34b8",
    "metadata": {},
    "outputs": [
@@ -2440,11 +2422,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "7e72fcc3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (2,) + inhomogeneous part.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [84], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#  slicing of an numpy array in interations \u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# 2d  array \u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m arr \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m np\u001b[38;5;241m.\u001b[39mnditer(arr[\u001b[38;5;241m0\u001b[39m:,\u001b[38;5;241m0\u001b[39m:\u001b[38;5;241m3\u001b[39m:\u001b[38;5;241m2\u001b[39m]):\u001b[38;5;66;03m# [array location , index number]\u001b[39;00m\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(x)\n",
+      "\u001b[1;31mValueError\u001b[0m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (2,) + inhomogeneous part."
+     ]
+    }
+   ],
+   "source": [
+    "#  slicing of an numpy array in interations \n",
+    "# 2d  array \n",
+    "\n",
+    "arr = np.array([[1,2,3],[5,6,7,8]])\n",
+    "\n",
+    "for x in np.nditer(arr[0:,0:3:2]):# [array location , index number]\n",
+    "    print(x)"
+   ]
   },
   {
    "cell_type": "code",
